--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
   <main class="site-main" style="height: 10000px;">
     <div class="container py-5">
-      <h1>WP Slice Starter</h1>
+      <h1>Test</h1>
       <p>Ovdje ide Figma slice markup...</p>
     </div>
   </main>
