--- a/src/index.html
+++ b/src/index.html
@@ -3,71 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WP Slice Starter</title>
+  <title>Kontra Slice</title>
 </head>
 <body>
 
-  <header class="site-header sticky-top mt-4">
-    <nav class="navbar navbar-expand-lg sticky-top py-0">
-      <div class="container p-4">
-        <!-- Logo -->
-        <a class="navbar-brand fw-bold fs-5" href="#">
-          <img src="./img/logo.svg" alt="Logo" style="max-height: 40px;">
-        </a>
-
-        <!-- Navigacija (vidljiva na lg breakpoint i više) -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mx-auto gap-1 gap-lg-3 mt-3 mt-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="#">For Candidates</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Know Your Strengths</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">For Employers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">FAQ</a>
-            </li>
-          </ul>
-          
-          <!-- CTA Gumbi za mobilnu verziju (vidljivi samo na mobilnom) -->
-          <div class="navbar-cta-mobile d-lg-none mt-4">
-            <a href="#" class="btn btn-outline-primary btn-sm w-100">Contact</a>
-            <a href="#" class="btn btn-primary btn-sm w-100">Login / Sign up</a>
-          </div>
-        </div>
-
-        <!-- CTA Gumbi (vidljivi samo na lg breakpoint i više) -->
-        <div class="navbar-cta d-none d-lg-flex gap-2">
-          <a href="#" class="btn btn-outline-primary btn-sm">Contact</a>
-          <a href="#" class="btn btn-primary btn-sm">Login / Sign up</a>
-        </div>
-
-        <!-- Hamburger Menu Toggle -->
-        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggle-text">Menu</span>
-        </button>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h1>Kontra Slice Starter</h1>
       </div>
-    </nav>
-  </header>
-
-  <main class="site-main" style="height: 10000px;">
-    <div class="container py-5">
-      <h1>Test</h1>
-      <p>Ovdje ide Figma slice markup...</p>
     </div>
-  </main>
+  </div>
 
-  <footer class="site-footer">
-    <div class="container py-4">
-      <p>&copy; 2026 - WP Slice</p>
-    </div>
-  </footer>
+  
 
 </body>
 </html>
