--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,11 @@
-<!doctype html>
-<html lang="hr">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kontra Slice</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kontra Agency</title>
 </head>
 <body>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1>Kontra Slice Starter</h1>
-      </div>
-    </div>
-  </div>
-
-  
-
+  <h1 class="text-center py-5">Kontra Agency</h1>
 </body>
 </html>
